--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+/* Fonts */
+@import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap";
+
+/* Stylesheets */
+@import "/static/vendor/fontawesome-free/css/all.min.css";
+@import "/static/vendor/aos/aos.css";
+@import "/static/vendor/glightbox/css/glightbox.min.css";
+@import "/static/vendor/swiper/swiper-bundle.min.css";
+@import "/static/css/main.css";
+
 a:link {
     text-decoration: none;
 }
